# microkinetic-network-editor

./: .gitignore  CMakeLists.txt  Doxyfile.lint  README.md  check_doxygen.cmake  microkinetic-network-editor.nsi  mne.rc  package-windows.sh  resources.qrc
.github/workflows/: windows.yml
assets/: solarized-swatches.yaml
assets/shaders/: axes.fs  axes.vs  gui.frag  gui.vert
assets/swatches/: solarized-swatches.yaml
examples/: fnf_bare.yaml  fnf_build.yaml  fnf_build_rev1.yaml  fnf_build_rev2.yaml  fnf_build_rev3.yaml  fnf_build_rev4.yaml  ru1121.yaml
examples/ru1121_structures/: co__1.yaml
scripts/: check_doxygen.sh
src/: build_info.h.in  color_picker_dialog.cpp  color_picker_dialog.h  color_wheel_widget.cpp  color_wheel_widget.h  config.h  log_window.cpp  log_window.h  logging.cpp  logging.h  main.cpp  main_window.cpp  main_window.h  network_io.cpp  network_io.h  network_view.cpp  network_view.h  vibrational_analysis.cpp  vibrational_analysis.h
src/structures/: anaglyph_widget.cpp  anaglyph_widget.h  atom.cpp  atom.h  atom_settings.cpp  atom_settings.h  bond.cpp  bond.h  matrixmath.h  model.cpp  model.h  model_loader.cpp  model_loader.h  primitivebuilder.cpp  primitivebuilder.h  shader_program.cpp  shader_program.h  shader_program_manager.cpp  shader_program_manager.h  shader_program_types.h  structure.cpp  structure.h  structure_loader.cpp  structure_loader.h  structure_renderer.cpp  structure_renderer.h
